# subguard-app

./: README.md  docker-compose.yml
backend/: .env.template  .gitignore  Dockerfile  pyproject.toml
backend/subguard/: manage.py  run.py
backend/subguard/core/management/commands/: initialize_admin_account.py
backend/subguard/subguard/: asgi.py  settings.py  urls.py  wsgi.py
backend/subguard/users/: signals.py  urls.py
backend/subguard/users/admin/: __init__.py  user_admin.py  user_verification.py
backend/subguard/users/managers/: user_manager.py
backend/subguard/users/migrations/: 0001_initial.py  0002_user_is_verified_userverfication.py
backend/subguard/users/models/: __init__.py  user.py  user_verification.py
backend/subguard/users/serializers/: __init__.py  user_register.py  user_token_obtain.py  user_verification.py
backend/subguard/users/templates/: verify_email.html
backend/subguard/users/tests/models/: test_user_model.py  test_user_verification.py
backend/subguard/users/tests/views/: test_resend_user_verification.py  test_user_obtain.py  test_user_register.py  test_verify_user_account.py.py
backend/subguard/users/views/: __init__.py  user_register.py  user_verification.py
